Map w test markers loads; test bot responses refreshed; food categories titled.

--- a/templates/seinfood.html
+++ b/templates/seinfood.html
@@ -9,6 +9,10 @@
             background-color: grey;
           }
           </style>
+          <script type="text/javascript">
+
+            </script>
+        
     </head>
 
     <header class="subpage-header">
@@ -64,6 +68,6 @@
     </div>
         <script type="text/javascript" src="static/js/sein_maps.js"></script>
         <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCsOzGOFmAJX9Os-QZTbN4C3Lm0B8qNdg&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=API&callback=initMap">
         </script>
 </html>
