Submit on enter in bot chat

--- a/templates/seinfood.html
+++ b/templates/seinfood.html
@@ -65,6 +65,6 @@
     </div>
         <script type="text/javascript" src="static/js/sein_maps.js"></script>
         <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBN7Ys5b4G0wm80VPUD8FlMsMHexHG9LdU&callback=initMap">
         </script>
 </html>
