--- a/templates/character_chat.html
+++ b/templates/character_chat.html
@@ -56,7 +56,7 @@
             <label for="username">Username:</label>
             <input type="username" id="username" name="username" {% if user_name %} placeholder="{{ user_name }}" {%
                 endif %}><br><br>
-            <textarea rows="3" cols="30" name="user-input" id=#user-input></textarea>
+            <textarea rows="3" cols="30" name="user-input" id="user-input"></textarea>
             <br>
             <input type="submit" value="Submit" id="submit-button">
             <br>
@@ -68,7 +68,6 @@
             const submitInput = document.getElementById('user-input');
 
             submitInput.addEventListener('keydown', function(event) {
-            console.log(submitInput)
             
             if (event.keyCode == 13) {
 
