--- a/templates/festivus.html
+++ b/templates/festivus.html
@@ -11,6 +11,7 @@
     <body>
         <nav class="nav-bar">
             <ol>
+                <li><a href="/">Home Page</a></li>
                 <li><a href="/character-chat">Character Bot</a></li>
                 <li><a href="/where-are-they-now">Where Are They Now?</a></li>
                 <li><a href="/food-locator">SeinFood Locator</a></li>
