--- a/templates/where-are-they-now.html
+++ b/templates/where-are-they-now.html
@@ -13,6 +13,7 @@
             <ol>
                 <li><a href="/">Home Page</a></li>
                 <li><a href="/character-chat">Character Bot</a></li>
+                <li><a href="/where-are-they-now">Where Are They Now?</a></li>
                 <li><a href="/food-locator">SeinFood Locator</a></li>
                 <li><a href="/festivus">Festivus Countdown</a></li>
             </ol>
