Hidden elements by id for chat session

--- a/templates/seinfood.html
+++ b/templates/seinfood.html
@@ -72,6 +72,6 @@
     <script type="text/javascript" src="static/js/sein_maps.js">
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1cehJkP_rAfMP7QnCqBSzBz_4-7wFjRI&callback=initMap">
     </script>
 </html>
