--- a/templates/character_chat.html
+++ b/templates/character_chat.html
@@ -1,26 +1,15 @@
-<!DOCTYPE html>
-<html>
+{% extends 'base.html' %}
 
-    <head>
-        <title>The Ultimate Seinfeld Experience</title>
-    </head>
+    <title>{% block title %}Seinfeld Character Bot Chat{% endblock %}</title>
 
-    <header class="page-header">
-        <h1>The Ultimate Seinfeld Experience </h1>
+
+    {% block content %}
+    <header class="subpage-header">
+        <h1>Seinfeld Character Bot Chat</h1>
     </header>
 
-    <body>
-        <nav class="nav-bar">
-            <ol>
-                <li><a href="/">Home Page</a></li>
-                <li><a href="/character-chat">Character Bot</a></li>
-                <li><a href="/where-are-they-now">Where Are They Now?</a></li>
-                <li><a href="/food-locator">SeinFood Locator</a></li>
-                <li><a href="/festivus">Festivus Countdown</a></li>
-            </ol>
-        </nav>
         <div class="bot-chat">
-            <h3 id="bot-chat">Chat with a Seinfeld character bot!</h3>
+            <h2 id="bot-chat">Chat with a Seinfeld character bot!</h3>
             <p id ="character-instructions">Pick a character from the show to have an instant-message conversation with.</p>
             <form action="/character-chat">
                 <select name="character-bot" id="character-select">
@@ -103,5 +92,5 @@
                     <input type="submit" value="End Chat" id="end-convo">
             </form>
         </div>
-    </body>
-</html>
+
+    {% endblock %}
