--- a/templates/festivus.html
+++ b/templates/festivus.html
@@ -1,28 +1,16 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Countdown to Festivus</title>
-    </head>
+{% extends 'base.html' %}
 
+    <title>{% block title %}Countdown to Festivus{% endblock %}</title>
+
+
+    {% block content %}
     <header class="subpage-header">
         <h1>Countdown to Festivus</h1>
     </header>
-
-    <body>
-        <nav class="nav-bar">
-            <ol>
-                <li><a href="/">Home Page</a></li>
-                <li><a href="/character-chat">Character Bot</a></li>
-                <li><a href="/where-are-they-now">Where Are They Now?</a></li>
-                <li><a href="/food-locator">SeinFood Locator</a></li>
-                <li><a href="/festivus">Festivus Countdown</a></li>
-            </ol>
-        </nav>
 
         <div class="countdown">
             <h2 id="festivus-countdown">Festivus is December 23rd 2021!</h2>
             <p>Only<span id="days-left"> {{  days_left  }}</span> days until it's here <em>– mark your calendar.</em></p>
         </div>
         
-    </body>
-</html>
+    {% endblock %}
