--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,28 +1,16 @@
-<!DOCTYPE html> 
-<html>
-    <head>
-        <title>The Ultimate Seinfeld Experience</title>
-    </head>
+{% extends 'base.html' %}
 
-    <header class="page-header">
-        <h1>The Ultimate Seinfeld Experience </h1>
-    </header>
 
-    <body>
-        <nav class="nav-bar">
-            <ol>
-                <li><a href="/character-chat">Character Bot</a></li>
-                <li><a href="/where-are-they-now">Where Are They Now?</a></li>
-                <li><a href="/food-locator">SeinFood Locator</a></li>
-                <li><a href="/festivus">Festivus Countdown</a></li>
-            </ol>
-        </nav>
-    </body>
-    
+     <title>{% block title %}The Ultimate Seinfeld Homepage{% endblock %}</title>
+
+
+    {% block content %}
+    {% endblock %}
+
+    {% block footer %}
     <footer>
         <p>You are the {{ counter }} visitor to the site!</p>
         <!-- found hit counter online -->
         <img src="https://hitcounter.pythonanywhere.com/count/tag.svg" alt="Hits">
-        <p>Sam Gerrity Industries 2021</p>
     </footer>
-</html>
+    {% endblock %}
