--- a/templates/base.html
+++ b/templates/base.html
@@ -1,35 +1,155 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="/static/css/styles.css">
-    
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>{% block title %}TAB TITLE GOES HERE{% endblock %}The Ultimate Seinfeld Experience</title>
     
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <!-- can't get this external link to work -->
+    <link href="index.css" rel="stylesheet">
+
+    <style>
+        /* GLOBAL STYLES
+        -------------------------------------------------- */
+        /* Padding below the footer and lighter body text */
+
+        body {
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+        color: #5a5a5a;
+        }
+            
+        /* CUSTOMIZE THE CAROUSEL
+        -------------------------------------------------- */
+        
+        /* Carousel base class */
+        .carousel {
+            margin-bottom: 4rem;
+        }
+        /* Since positioning the image, we need to help out the caption */
+        .carousel-caption {
+            bottom: 3rem;
+            z-index: 10;
+        }
+        
+        /* Declare heights because of positioning of img element */
+        .carousel-item {
+            height: 32rem;
+            background-color: #777;
+        }
+        .carousel-item > img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            min-width: 100%;
+            height: 32rem;
+        }
+        
+        
+        /* MARKETING CONTENT
+        -------------------------------------------------- */
+        
+        /* Center align the text within the three columns below the carousel */
+        .marketing .col-lg-4 {
+            margin-bottom: 1.5rem;
+            text-align: center;
+        }
+        .marketing h2 {
+            font-weight: 400;
+        }
+        .marketing .col-lg-4 p {
+            margin-right: .75rem;
+            margin-left: .75rem;
+        }
+        
+        
+        /* Featurettes
+        ------------------------- */
+        
+        .featurette-divider {
+            margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+        }
+        
+        /* Thin out the marketing headings */
+        .featurette-heading {
+            font-weight: 300;
+            line-height: 1;
+            letter-spacing: -.05rem;
+        }
+        
+        
+        /* RESPONSIVE CSS
+        -------------------------------------------------- */
+        
+        @media (min-width: 40em) {
+            /* Bump up size of carousel content */
+            .carousel-caption p {
+            margin-bottom: 1.25rem;
+            font-size: 1.25rem;
+            line-height: 1.4;
+            }
+        
+            .featurette-heading {
+            font-size: 50px;
+            }
+        }
+        
+        @media (min-width: 62em) {
+            .featurette-heading {
+            margin-top: 7rem;
+            }
+        }
+    </style>
 
     {% block head %}<h1>The Ultimate Seinfeld Experience</h1>{% endblock %}
-
-
-    <nav class="nav-bar">
-        <ol>
-            <li><a href="/">Home Page</a></li>
-            <li><a href="/character-chat">Character Bot</a></li>
-            <li><a href="/where-are-they-now">Where Are They Now?</a></li>
-            <li><a href="/food-locator">SeinFood Locator</a></li>
-            <li><a href="/festivus">Festivus Countdown</a></li>
-        </ol>
-    </nav>
+    <header>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <a class="navbar-brand" href="#">Carousel</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/character-chat">Character Bot</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/where-are-they-now">Where Are They Now?</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/food-locator">SeinFood Locator</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/festivus">Festivus Countdown</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 </head>
 
-    {% block content %}
-    BODY CONTENT GOES HERE
-    {% endblock %}
+        {% block content %}
+        BODY CONTENT GOES HERE
+        {% endblock %}
+    <body>
 
-    <br>
-
-    {% block footer %}
-    {% endblock %}
-    <footer>Sam Gerrity Industries 2021</footer>
-    
-</body>
+      
+        <!-- FOOTER -->
+        <footer class="container">
+            <p class="float-right"><a href="#">Back to top</a></p>
+            {% block footer %}
+            {% endblock %}
+            <p>&copy; Sam Gerrity Industries 2021 &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        </footer>
+        <br>
+        <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    </body>
 </html>
