Radius for map searched is now 16000 meters

--- a/templates/base.html
+++ b/templates/base.html
@@ -103,11 +103,9 @@
             }
         }
     </style>
-
-    {% block head %}<h1>The Ultimate Seinfeld Experience</h1>{% endblock %}
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="#">Carousel</a>
+            <a class="navbar-brand" href="#">The Ultimate Seinfeld Experience</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
