--- a/templates/seinfood.html
+++ b/templates/seinfood.html
@@ -33,7 +33,7 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-5">
+                    <div class="col-sm-5">
                         <div class="food-locate-form">
                             <h3>Dine Like the Characters!</h3>
                             <form action="/zip-code">
@@ -47,7 +47,7 @@
                             </form>
                         </div>
                     </div>
-                    <div class="col-xl-7">
+                    <div class="col-sm-7">
                         {% if zip_code_search %}
                         <div class="food-results">
                             <h2>Places: </h2>
