--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -13,7 +13,8 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="first-slide" src="static/images/color group 2.png" alt="First slide">
+              <div>
+              <img class="d-block img-fluid" id="no-stretch" src="static/images/color group 2.png" alt="First slide">
               <div class="container">
                 <div class="carousel-caption text-left">
                   <h1>The Ultimate Seinfeld Experience</h1>
@@ -21,7 +22,7 @@
                 </div>
               </div>
             </div>
-            
+          </div>
           </div>
           
         </div>
