--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -17,7 +17,7 @@
               <img class="d-block img-fluid" id="no-stretch" src="static/images/color group 2.png" alt="First slide">
               <div class="container">
                 <div class="carousel-caption text-left">
-                  <h1>The Ultimate Seinfeld Experience</h1>
+                  <h1 id="sam-font">The Ultimate Seinfeld Experience</h1>
                   <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                 </div>
               </div>
