--- a/templates/seinfood.html
+++ b/templates/seinfood.html
@@ -71,6 +71,6 @@
     <script type="text/javascript" src="static/js/sein_maps.js">
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAu0K1tl63X34gNx4rehOAPA6QfJWNrLjk&callback=initMap">
     </script>
 {% endblock %}
