--- a/templates/example.html
+++ b/templates/example.html
@@ -12,116 +12,58 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
     <style>
-
-      /*
- * Globals
- */
-
-/* Links */
-a,
-a:focus,
-a:hover {
-  color: #fff;
-}
-
-/* Custom default button */
-.btn-secondary,
-.btn-secondary:hover,
-.btn-secondary:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
-  border: .05rem solid #fff;
-}
-
-
-/*
- * Base structure
- */
-
-html,
-body {
-  height: 100%;
-  background-color: #333;
-}
-
-body {
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: flex;
-  -ms-flex-pack: center;
-  -webkit-box-pack: center;
-  justify-content: center;
-  color: #fff;
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-}
-
-.cover-container {
-  max-width: 42em;
-}
-
-
-/*
- * Header
- */
-
-
-
-/*
- * Cover
- */
-.cover {
-  padding: 0 1.5rem;
-}
-.cover .btn-lg {
-  padding: .75rem 1.25rem;
-  font-weight: 700;
-}
-
-
-
-    </style>
-  </head>
-
-  <body class="text-center">
-
-    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-      <header class="masthead mb-auto">
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-          <a class="navbar-brand" href="#">The Ultimate Seinfeld Experience</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarCollapse">
-              <ul class="navbar-nav mr-auto">
-                  <li class="nav-item active">
-                      <a class="nav-link" href="/">Home</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="/character-chat">Character Bot</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="/where-are-they-now">Where Are They Now?</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="/food-locator">SeinFood Locator</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="/festivus">Festivus Countdown</a>
-                  </li>
-              </ul>
-          </div>
-      </nav>
-
-        </div>
-      </header>
+      body {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    color: #5a5a5a;
+  }
+  
+      </style>
+      <header>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #dd6e42">
+            <a class="navbar-brand" href="#">The Ultimate Seinfeld Experience</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/character-chat">Character Bot</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/where-are-they-now">Where Are They Now?</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/food-locator">SeinFood Locator</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/festivus">Festivus Countdown</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
       <main role="main" class="inner cover">
-        <h1 class="cover-heading">Countdown to Festivus</h1>
-        <p class="lead">Festivus is December 23rd 2021!</p>
-        <p class="countdown">Only<span id="days-left"></span> days until it's here <em>– mark your calendar.</em>
+        <div class="container">
+        <p>
+          <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+            Link with href
+          </a>
+          <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            Button with data-bs-target
+          </button>
         </p>
+        <div class="collapse" id="collapseExample">
+          <div class="card card-body">
+            Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+          </div>
+        </div>
+      </div>
+        
       </main>
       <footer class="mastfoot mt-auto">
         <div class="container">
