--- a/templates/character_chat.html
+++ b/templates/character_chat.html
@@ -4,9 +4,11 @@
 
 
     {% block content %}
-    <header class="subpage-header">
-        <h1>Seinfeld Character Bot Chat</h1>
-    </header>
+    <div class="subpage-header">
+        <h1>Character Bot Chat</h1>
+    </div>
+    <br>
+    <br>
         <div class="container">
             <div class="float-right"></div>
                 <div class="bot-chat">
@@ -78,12 +80,6 @@
                     <p>To chat with a different character, end the conversation then choose a new name from the top.</p>
                     <form action="/clear" method="GET">
                         <input type="submit" value="End Chat" id="end-convo">
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
                     </form>
                 </div>
             </div>
