--- a/templates/festivus.html
+++ b/templates/festivus.html
@@ -5,9 +5,9 @@
 
 
 {% block content %}
-<header class="subpage-header">
+<div class="subpage-header">
     <h1>Countdown to Festivus</h1>
-</header>
+</div>
 
     <div class="countdown">
         <h2 id="festivus-countdown">Festivus is December 23rd 2021!</h2>
