--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,28 +5,25 @@
 
 
     {% block content %}
-    <main role="main">
-      
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <div>
+    <main role="main">     
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div>
               <img class="d-block img-fluid" id="no-stretch" src="static/images/color group 2.png" alt="First slide">
               <div class="container">
                 <div class="carousel-caption text-left">
-                  <h1 id="sam-font">The Ultimate Seinfeld Experience</h1>
+                  <h1 id="sam-font-2">The Ultimate Seinfeld Experience</h1>
                   <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                 </div>
               </div>
             </div>
           </div>
-          </div>
-          
-        </div>
-  
+        </div>          
+      </div>  
   
         <!-- Marketing messaging and featurettes
       ================================================== -->
@@ -70,7 +67,7 @@
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
           </div>
           <div class="col-md-5">
             <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
